--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -5,12 +5,14 @@ env:
   DOCKER_USER: ${{secrets.DOCKER_USER}}
   DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
   REPO_NAME: ${{secrets.REPO_NAME}}
+  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
 jobs:
   push-image-to-docker-hub:  # job name
     runs-on: ubuntu-latest  # runner name : (ubuntu latest version) 
     steps:
     - uses: actions/checkout@v2 # first action : checkout source code
-    
+
     - name: docker login
       run: | # log into docker hub account
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD  
@@ -24,3 +26,11 @@ jobs:
 
     - name: Docker Push
       run: docker push $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+
+    - name: ecr login
+      run: | # login to ecr
+        aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 833945302705.dkr.ecr.us-east-1.amazonaws.com
+
+    - name: docker push to ecr
+    - run: docker tag $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }} 833945302705.dkr.ecr.us-east-1.amazonaws.com/githubactions:${{ steps.date.outputs.date }}
+    - run:  docker push 833945302705.dkr.ecr.us-east-1.amazonaws.com/githubactions:${{ steps.date.outputs.date }}
