--- a/.github/workflows/push-docker-image.yaml
+++ b/.github/workflows/push-docker-image.yaml
@@ -29,7 +29,7 @@ jobs:
 
     - name: ecr login
       run: | # login to ecr
-        aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 833945302705.dkr.ecr.us-east-1.amazonaws.com
+        docker login --username AWS --password "$(aws ecr get-login-password --region us-east-1)" 833945302705.dkr.ecr.us-east-1.amazonaws.com
 
     - name: docker tag to ecr
       run: docker tag $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }} 833945302705.dkr.ecr.us-east-1.amazonaws.com/githubactions:${{ steps.date.outputs.date }}
